# dylib_crash

./: .gitignore  Cargo.toml  README.md  mise.toml  package.json  tsconfig.json
opacity-ios/: .gitignore  LICENSE  OpacityCore.podspec  Package.swift  README.md  exported_symbols.txt
opacity-ios/.swiftpm/xcode/xcshareddata/xcschemes/: OpacityCore.xcscheme
opacity-ios/sdk.xcframework/ios-arm64/sdk.framework/: sdk
opacity-ios/sdk.xcframework/ios-arm64_x86_64-simulator/sdk.framework/: Info.plist  sdk
opacity-ios/spm_example/OpacitySPM.xcodeproj/: project.pbxproj
opacity-ios/spm_example/OpacitySPM.xcodeproj/xcshareddata/xcschemes/: Debug.xcscheme  Release.xcscheme
opacity-ios/spm_example/test_app/: AppDelegate.swift  Info.plist  SceneDelegate.swift  ViewController.swift
opacity-ios/spm_example/test_app/Base.lproj/: Main.storyboard
opacity-ios/src/objc/: OpacityObjCWrapper.h  OpacityObjCWrapper.mm  helper_functions.h  helper_functions.mm  sdk.h
opacity-ios/src/swift/: OpacityError.swift  OpacitySwiftWrapper.swift
scripts/: build.android.mts  build.clean.mts  build.config.mts  build.ios.mts  build.mts  build.notify.mts
scripts/templates/sdk.xcframework/: Info.plist
sdk/: Cargo.toml  build.rs
sdk/src/: lib.rs
